Fixed overflow issues / Limited width and height

--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,22 @@
   user-select: none;
 }
 
+/* Make window fit all the available space */
 html,
 body,
 #root {
   height: 100%;
+}
+
+html {
+  background: var(--clr-bg-1);
   font: var(--fs-medium) "Gantari", sans-serif;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #root {
@@ -35,8 +46,11 @@ body,
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: var(--clr-bg-1);
+  width: 100%;
+  max-width: 1280px;
+  max-height: 768px;
   color: var(--clr-text-1);
+  border: 1px solid var(--clr-bg-2);
 }
 
 /* Scrollbar */
